umi: parts: implement dc dimming preference
based on previous DisplayFeature-powered dc dimming,
except now it uses exposure adjustment instead.

Co-authored-by: TheScarastic <warabhishek@gmail.com>
Co-authored-by: jhenrique09 <jhenrique09.mcz@hotmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -235,6 +235,10 @@ on post-fs-data
     # Create directory used for dump collection
     mkdir /data/vendor/ssrdump 0770 root system
 
+    # Allow system to modify exposure adjustment state
+    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display-primary/msm_fb_ea_enable
+    chmod 0660 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/msm_fb_ea_enable
+
     # Create directory used by display clients
     mkdir /data/vendor/display 0770 system graphics
 
