--- a/configs/audio/audio_io_policy.conf
+++ b/configs/audio/audio_io_policy.conf
@@ -13,30 +13,30 @@
 outputs {
   default {
     flags AUDIO_OUTPUT_FLAG_PRIMARY
-    formats AUDIO_FORMAT_PCM_16_BIT
+    formats AUDIO_FORMAT_PCM_24_BIT_PACKED|AUDIO_FORMAT_PCM_24_BIT
     sampling_rates 48000
-    bit_width 16
+    bit_width 24
     app_type 69937
   }
   proaudio {
     flags AUDIO_OUTPUT_FLAG_FAST|AUDIO_OUTPUT_FLAG_RAW
-    formats AUDIO_FORMAT_PCM_16_BIT
+    formats AUDIO_FORMAT_PCM_24_BIT_PACKED|AUDIO_FORMAT_PCM_24_BIT
     sampling_rates 48000
-    bit_width 16
+    bit_width 24
     app_type 69943
   }
   voip_rx {
     flags AUDIO_OUTPUT_FLAG_VOIP_RX|AUDIO_OUTPUT_FLAG_DIRECT
-    formats AUDIO_FORMAT_PCM_16_BIT
+    formats AUDIO_FORMAT_PCM_24_BIT_PACKED|AUDIO_FORMAT_PCM_24_BIT
     sampling_rates 8000|16000|32000|48000
-    bit_width 16
+    bit_width 24
     app_type 69946
   }
   deep_buffer {
     flags AUDIO_OUTPUT_FLAG_DEEP_BUFFER
-    formats AUDIO_FORMAT_PCM_16_BIT
+    formats AUDIO_FORMAT_PCM_24_BIT_PACKED|AUDIO_FORMAT_PCM_24_BIT
     sampling_rates 48000
-    bit_width 16
+    bit_width 24
     app_type 69936
   }
   direct_pcm_16 {
